fix(ecc): partial update merge, 202 sentinel, doc completeness